# textcavator-readers

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: api.md  combining_readers.md  example_csv.md  example_custom.md  example_xml.md  index.md  usage.md
ianalyzer_readers/: extract.py  xml_tag.py
ianalyzer_readers/readers/: combined.py  core.py  etree.py  pdf.py  rds.py  xml.py
tests/: html_reader.py  test_combined_reader.py  test_generic_extractors.py  test_json_reader.py  xlsx_reader.py
tests/csv/: test_csv_reader.py
tests/custom/: test_custom_reader.py
tests/json/: json_reader.py
tests/pdf/: test_pdf_reader.py
tests/rdf/: rdf_reader.py  test_rdf_reader.py
tests/rds/: generate_file.R  test_rds_reader.py
tests/rds/data/: hamlet.rds
tests/xml/: test_etree_xml_reader.py  test_xml_extraction.py  test_xml_reader.py
textcavator_readers/: extract.py  xml_tag.py
textcavator_readers/readers/: core.py  json.py  pdf.py  rdf.py  rds.py
